# potato-player

./: CMakeLists.txt  README.md
lib/glad/include/glad/: gl.h  glad.h  gles2.h
lib/glad/src/: glad.c
lib/openglut-0.6.3/: Makefile  config.h  config.status  libtool
lib/openglut-0.6.3/doc/: Makefile
lib/openglut-0.6.3/doc/cat3/: glutAddMenuEntry.0  glutAddSubMenu.0  glutAttachMenu.0  glutBitmapCharacter.0  glutBitmapHeight.0  glutBitmapLength.0  glutBitmapString.0  glutBitmapWidth.0  glutButtonBoxFunc.0  glutChangeToMenuEntry.0  glutChangeToSubMenu.0  glutCloseFunc.0  glutCopyColormap.0  glutCreateMenu.0  glutCreateMenuWindow.0  glutCreateSubWindow.0  glutCreateWindow.0  glutDestroyMenu.0  glutDestroyWindow.0  glutDetachMenu.0  glutDeviceGet.0  glutDialsFunc.0  glutDisplayFunc.0  glutEnterGameMode.0  glutEntryFunc.0  glutEstablishOverlay.0  glutExtensionSupported.0  glutForceJoystickFunc.0  glutFullScreen.0  glutGameModeGet.0  glutGameModeString.0  glutGet.0  glutGetColor.0  glutGetMenu.0  glutGetMenuData.0  glutGetModifiers.0  glutGetProcAddress.0  glutGetWindow.0  glutGetWindowData.0  glutHideOverlay.0  (+98 more)
lib/openglut-0.6.3/doc/man/: glutAddMenuEntry.3  glutAddSubMenu.3  glutAttachMenu.3  glutBitmapCharacter.3  glutBitmapHeight.3  glutBitmapLength.3  glutBitmapString.3  glutBitmapWidth.3  glutButtonBoxFunc.3  glutChangeToMenuEntry.3  glutChangeToSubMenu.3  glutCloseFunc.3  glutCopyColormap.3  glutCreateMenu.3  glutCreateMenuWindow.3  glutCreateSubWindow.3  glutCreateWindow.3  glutDestroyMenu.3  glutDestroyWindow.3  glutDetachMenu.3  glutDeviceGet.3  glutDialsFunc.3  glutDisplayFunc.3  glutEnterGameMode.3  glutEntryFunc.3  glutEstablishOverlay.3  glutExtensionSupported.3  glutForceJoystickFunc.3  glutFullScreen.3  glutGameModeGet.3  glutGameModeString.3  glutGet.3  glutGetColor.3  glutGetMenu.3  glutGetMenuData.3  glutGetModifiers.3  glutGetProcAddress.3  glutGetWindow.3  glutGetWindowData.3  glutHideOverlay.3  (+98 more)
lib/openglut-0.6.3/include/: Makefile
lib/openglut-0.6.3/include/GL/: Makefile
lib/openglut-0.6.3/progs/: Makefile
lib/openglut-0.6.3/progs/demos/: Makefile  Makefile.am  Makefile.in  demos.dsw
lib/openglut-0.6.3/progs/demos/CallbackMaker/: CallbackMaker.c  CallbackMaker.dev  CallbackMaker.dsp  Makefile  Makefile.am  Makefile.in
lib/openglut-0.6.3/progs/demos/Fractals/: Fractals.dsp  Makefile  Makefile.am  Makefile.in  fractals.c  fractals.dev
lib/openglut-0.6.3/progs/demos/Fractals_random/: Fractals_random.dev  Fractals_random.dsp  Makefile  Makefile.am  Makefile.in  fractals_random.c
lib/openglut-0.6.3/progs/demos/Lorenz/: Makefile  Makefile.am  Makefile.in  lorenz.c  lorenz.dev  lorenz.dsp
lib/openglut-0.6.3/progs/demos/One/: Makefile  Makefile.am  Makefile.in  one.c  one.dev  one.dsp
lib/openglut-0.6.3/progs/demos/fonts/: Makefile  Makefile.am  Makefile.in  fonts.c  fonts.dev
lib/openglut-0.6.3/progs/demos/joystick/: Makefile  Makefile.am  Makefile.in  joystick.c  joystick.dev  joystick.dsp
lib/openglut-0.6.3/progs/demos/offscreen/: Makefile  Makefile.am  Makefile.in  offscreen.c  offscreen.dev  offscreen.dsp
lib/openglut-0.6.3/progs/demos/shapes/: Makefile  Makefile.am  Makefile.in  shapes  shapes.c  shapes.dev  shapes.dsp
lib/openglut-0.6.3/progs/demos/shapes/.deps/: shapes-shapes.Po
lib/openglut-0.6.3/progs/demos/shapes/.libs/: lt-shapes  shapes
lib/openglut-0.6.3/progs/demos/unmanaged/: Makefile  Makefile.am  Makefile.in  unmanaged.c  unmanaged.dev  unmanaged.dsp
lib/openglut-0.6.3/progs/redbook/: Makefile
lib/openglut-0.6.3/progs/tests/: Makefile
lib/openglut-0.6.3/progs/tests/fonts/: Makefile
lib/openglut-0.6.3/src/: Makefile  libopenglut.la  libopenglut_la-og_callbacks.lo  libopenglut_la-og_cursor.lo  libopenglut_la-og_display.lo  libopenglut_la-og_ext.lo  libopenglut_la-og_font.lo  libopenglut_la-og_font_data.lo  libopenglut_la-og_gamemode.lo  libopenglut_la-og_geometry.lo  libopenglut_la-og_init.lo  libopenglut_la-og_joystick.lo  libopenglut_la-og_main.lo  libopenglut_la-og_menu.lo  libopenglut_la-og_misc.lo  libopenglut_la-og_overlay.lo  libopenglut_la-og_state.lo  libopenglut_la-og_stroke_mono_roman.lo  libopenglut_la-og_stroke_roman.lo  libopenglut_la-og_structure.lo  libopenglut_la-og_teapot.lo  libopenglut_la-og_videoresize.lo  libopenglut_la-og_window.lo  og_main.c
lib/openglut-0.6.3/src/.deps/: libopenglut_la-og_callbacks.Plo  libopenglut_la-og_cursor.Plo  libopenglut_la-og_display.Plo  libopenglut_la-og_ext.Plo  libopenglut_la-og_font.Plo  libopenglut_la-og_font_data.Plo  libopenglut_la-og_gamemode.Plo  libopenglut_la-og_geometry.Plo  libopenglut_la-og_init.Plo  libopenglut_la-og_joystick.Plo  libopenglut_la-og_main.Plo  libopenglut_la-og_menu.Plo  libopenglut_la-og_misc.Plo  libopenglut_la-og_overlay.Plo  libopenglut_la-og_state.Plo  libopenglut_la-og_stroke_mono_roman.Plo  libopenglut_la-og_stroke_roman.Plo  libopenglut_la-og_structure.Plo  libopenglut_la-og_teapot.Plo  libopenglut_la-og_videoresize.Plo  libopenglut_la-og_window.Plo
lib/openglut-0.6.3/src/.libs/: libopenglut.la  libopenglut.lai  libopenglut.so.1.0.0
lib/taglib-1.13/: DartConfiguration.tcl  install_manifest.txt
lib/taglib-1.13/examples/: CMakeCache.txt  CMakeLists.txt
playlists/: kc playlist.json  short-song-playlist.json  test-playlist.json
src/: AudioFile.cpp  AudioFile.h  AudioFileDisplay.cpp  AudioFileDisplay.h  Camera.cpp  Camera.h  ColorQuad.cpp  ColorQuad.h  DOCUMENTATION  Image.cpp  Image.h  Model.h  Playlist.cpp  Playlist.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Text.cpp  Text.h  Texture.cpp  Texture.h  audio_main.cpp  audio_player.cpp  audio_player.h  definitions.h  example_main.cpp  example_main2.cpp  filewatch.cpp  gladInclude.h  glfw_main.cpp  gpio.cpp  gpio.h  gpio_main.cpp  main.cpp  main2.cpp  miniaudio_test.cpp  paths.h.in  player.cpp  playlist_main.cpp  (+3 more)
